# elion-dal-111

./: .env.example  .env.local  Dockerfile  MIGRATION-recommended-config.md  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 0002_parent_child.py  0003_app_settings.py
docs/: DEFERRED.md  LOCAL_DEV.md
proto/: vectorstore.proto
scripts/: load_local.py
src/elion_dal/: config.py
src/elion_dal/admin/: web.py
src/elion_dal/chunking/: chunker.py
src/elion_dal/cli/: query.py
src/elion_dal/embedding/: factory.py  fastembed_provider.py  flag_provider.py  st_bm25_provider.py
src/elion_dal/ingestion/: seed_knowledge_base.py
src/elion_dal/service/: bootstrap.py  rest_api.py  server.py  servicer.py  sync.py
src/elion_dal/store/: models.py  pg_repo.py  qdrant_repo.py  settings_store.py
tests/: test_admin.py  test_chunker.py  test_filters.py  test_integration.py  test_pg_repo.py  test_qdrant_filter.py  test_servicer.py  test_settings_store.py  test_sync.py  test_units.py
