[project]
name = "elion-dal"
version = "0.1.0"
description = "Элион — Data Access Layer: векторизация и гибридное хранение/поиск (BGE-M3 + Qdrant) по gRPC"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
    "protobuf>=5.27",
    "qdrant-client>=1.12",
    "fastembed>=0.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "langchain-text-splitters>=0.3",
    "transformers>=4.44",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
flag = ["FlagEmbedding>=1.3"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6", "grpcio-reflection>=1.66", "pip-tools>=7.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = ["src/elion_dal/grpc_gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: требует поднятых Qdrant и Postgres (docker compose)",
]
